# AG-legalization-form-automation

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
app/: form_automation.py
